infrastructure/controllers/base/00-cilium/hubble-ingressroute.yaml
---
# Traefik IngressRoute configuration for Hubble UI
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-hubble
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`hubble-ui.k8s.tommahs.nl`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
          namespace: kube-system
